@@ -41,6 +41,10 @@ cjpeg.
 occurred when the application was invoked using I/O redirection
 (cjpeg <inputfile >output.jpg).
 
+[8] Fixed an issue whereby Windows applications that used libjpeg-turbo would
+fail to compile if the Windows system headers were included before jpeglib.h.
+This issue was caused by a conflict in the definition of the INT32 type.
+
 
 1.0.1
 =====
